refactor: 상품 수정 기능 테스트 코드 작성 및 기능 분리
- 컨트롤러에서 서비스 레이어로 비즈니스 로직 분리